// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecaptchaPrivacyLinks component When 'at' country code is provided renders German Recaptcha policy text and urls 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-1o02bdp-MuiTypography-root"
    data-testid="typography"
  >
    Diese Website ist durch reCAPTCHA geschützt und es gelten die 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-privacy-policy-link"
      href="https://policies.google.com/privacy?hl=de-at"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Datenschutzbestimmungen
    </a>
     und 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-terms-of-service-link"
      href="https://policies.google.com/terms?hl=de-at"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Nutzungsbedingungen
    </a>
     von Google.
  </p>
</div>
`;

exports[`RecaptchaPrivacyLinks component When 'de' country code is provided renders German Recaptcha policy text and urls 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-1o02bdp-MuiTypography-root"
    data-testid="typography"
  >
    Diese Website ist durch reCAPTCHA geschützt und es gelten die 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-privacy-policy-link"
      href="https://policies.google.com/privacy?hl=de-de"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Datenschutzbestimmungen
    </a>
     und 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-terms-of-service-link"
      href="https://policies.google.com/terms?hl=de-de"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Nutzungsbedingungen
    </a>
     von Google.
  </p>
</div>
`;

exports[`RecaptchaPrivacyLinks component When 'fi' country code is provided renders Finnish Recaptcha policy text and urls 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-1o02bdp-MuiTypography-root"
    data-testid="typography"
  >
    Tätä sivustoa suojaa reCAPTCHA, ja siihen sovelletaan Googlen 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-privacy-policy-link"
      href="https://policies.google.com/privacy?hl=fi-fi"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      tietosuojakäytäntöä
    </a>
     ja 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-terms-of-service-link"
      href="https://policies.google.com/terms?hl=fi-fi"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      käyttöehtoja
    </a>
    .
  </p>
</div>
`;

exports[`RecaptchaPrivacyLinks component When 'fr' country code is provided renders French Recaptcha policy text and urls 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-1o02bdp-MuiTypography-root"
    data-testid="typography"
  >
    Ce site est protégé par reCAPTCHA et la 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-privacy-policy-link"
      href="https://policies.google.com/privacy?hl=fr-fr"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      politique de confidentialité
    </a>
     et les 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-terms-of-service-link"
      href="https://policies.google.com/terms?hl=fr-fr"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      conditions d'utilisation
    </a>
     de Google s'appliquent.
  </p>
</div>
`;

exports[`RecaptchaPrivacyLinks component When 'it' country code is provided renders Italian Recaptcha policy text and urls 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-1o02bdp-MuiTypography-root"
    data-testid="typography"
  >
    Questo sito è protetto da reCAPTCHA e si applicano le 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-privacy-policy-link"
      href="https://policies.google.com/privacy?hl=it-it"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Norme sulla privacy
    </a>
     e i 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-terms-of-service-link"
      href="https://policies.google.com/terms?hl=it-it"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Termini di servizio
    </a>
     di Google.
  </p>
</div>
`;

exports[`RecaptchaPrivacyLinks component When 'no' country code is provided renders Norwegian Recaptcha policy text and urls 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-1o02bdp-MuiTypography-root"
    data-testid="typography"
  >
    Dette nettstedet er beskyttet av reCAPTCHA og Googles 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-privacy-policy-link"
      href="https://policies.google.com/privacy?hl=no-nb"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Personvernregler
    </a>
     og 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-terms-of-service-link"
      href="https://policies.google.com/terms?hl=no-nb"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Vilkår for bruk
    </a>
     gjelder.
  </p>
</div>
`;

exports[`RecaptchaPrivacyLinks component When custom styles added renders with custom style 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 customStyle css-1o02bdp-MuiTypography-root"
    data-testid="typography"
  >
    Diese Website ist durch reCAPTCHA geschützt und es gelten die 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-privacy-policy-link"
      href="https://policies.google.com/privacy?hl=de-de"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Datenschutzbestimmungen
    </a>
     und 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-terms-of-service-link"
      href="https://policies.google.com/terms?hl=de-de"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Nutzungsbedingungen
    </a>
     von Google.
  </p>
</div>
`;

exports[`RecaptchaPrivacyLinks component When invalid country code is provided renders English Recaptcha policy text and urls 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-1o02bdp-MuiTypography-root"
    data-testid="typography"
  >
    This site is protected by reCAPTCHA and the Google 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-privacy-policy-link"
      href="https://policies.google.com/privacy"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Privacy Policy
    </a>
     and 
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
      data-testid="recaptcha-terms-of-service-link"
      href="https://policies.google.com/terms"
      referrerpolicy="no-referrer"
      rel="noreferrer"
      target="_blank"
    >
      Terms of Service
    </a>
     apply.
  </p>
</div>
`;
